// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-uploader/ItemResume should render correctly with STATUS_COMPLETE 1`] = `
<div
  className="bcu-item-action"
>
  <IconCheck
    color="#26c281"
  />
</div>
`;

exports[`elements/content-uploader/ItemResume should render correctly with STATUS_ERROR 1`] = `
<div
  className="bcu-item-action"
>
  <Tooltip
    constrainToScrollParent={false}
    constrainToWindow={true}
    isDisabled={false}
    position="top-left"
    text={
      <FormattedMessage
        defaultMessage="Resume"
        id="be.resume"
      />
    }
    theme="default"
  >
    <PlainButton
      data-resin-target="uploadretry"
      onClick={[Function]}
      type="button"
    >
      <IconRetry
        height={24}
        width={24}
      />
    </PlainButton>
  </Tooltip>
</div>
`;

exports[`elements/content-uploader/ItemResume should render correctly with STATUS_ERROR and item is folder 1`] = `""`;

exports[`elements/content-uploader/ItemResume should render correctly with STATUS_IN_PROGRESS 1`] = `
<div
  className="bcu-item-action"
>
  <LoadingIndicator />
</div>
`;

exports[`elements/content-uploader/ItemResume should render correctly with STATUS_PENDING 1`] = `
<div
  className="bcu-item-action"
/>
`;
